Land page spacing fixed

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -6,7 +6,7 @@
 
 .aboutme {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -71,6 +71,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    height: 100%;
   }
 
   .prompt {
